# glacier-upload

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
glacier_backup/: main.py
glacier_backup/glacier/: glacier_library.py
glacier_backup/libraries/: glacier_library.py  packager_library.py  response_storage.py
glacier_upload/: main.py
glacier_upload/libraries/: file_size_helpers.py  glacier_library.py  hash_calculator.py  hash_helpers.py  helpers.py
src/glacier_upload/: main.py
src/glacier_upload/libraries/: file_size_helpers.py  glacier_library.py  hash_helpers.py  partlify.py  response_storage.py  setup_logger.py  upload_validator.py
tests/: conftest.py  test_file_size_helpers.py  test_glacier_library.py  test_hash_helpers.py  test_partlify.py  test_response_storage.py  test_upload_validator.py
