[metadata]
name = glacier-upload
version = 0.0.1
description = Upload files to AWS S3 Glacier.
url = https://docs.pytest.org/en/latest/
author = Vesa Vuoristo
author_email = vesa.vuoristo@gmail.com
project_urls =
    source=https://github.com/vevuo/glacier-upload

[options]
packages =
    glacier_upload
    glacier_upload.libraries
install_requires =
    wheel
    setuptools
    boto3==1.16.3
python_requires = >=3.6
package_dir =
    =src

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    glacier-upload=glacier_upload.main:main

[options.extras_require]
testing =
    pytest

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests

[flake8]
max-line-length=120